--- a/contacts-app-ui/src/main/resources/application.properties
+++ b/contacts-app-ui/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Contacts Server
 contacts.server=http://localhost:8080/contacts
-contacts.username=matt@email.com
+contacts.username=admin
 contacts.password=admin
+
+
 
 # UI Port
 server.port=8081
